--- a/public/index.html
+++ b/public/index.html
@@ -56,22 +56,16 @@
 
         // --- DATA ---
         const ALL_PRODUCTS = [
-          { id: 1, name: "Canne à lancer Pro Series", category: "fishing", subcategory: "Cannes", price: 149.99, originalPrice: 189.99, image: "🎣", rating: 4.8, reviews: 124, featured: true },
-          { id: 2, name: "Moulinet Titanium Elite", category: "fishing", subcategory: "Moulinets", price: 229.99, originalPrice: null, image: "🎣", rating: 4.9, reviews: 89, featured: true },
-          { id: 3, name: "Coffre à pêche XL", category: "fishing", subcategory: "Équipement", price: 49.99, originalPrice: 64.99, image: "🧰", rating: 4.6, reviews: 256, featured: false },
-          { id: 4, name: "Kit leurres (25 pcs)", category: "fishing", subcategory: "Leurres", price: 34.99, originalPrice: null, image: "🪱", rating: 4.7, reviews: 178, featured: false },
-          { id: 5, name: "Cuissardes Néoprène Pro", category: "fishing", subcategory: "Vêtements", price: 179.99, originalPrice: 219.99, image: "👢", rating: 4.5, reviews: 67, featured: true },
-          { id: 6, name: "Lunettes Polarisées HD", category: "fishing", subcategory: "Accessoires", price: 89.99, originalPrice: null, image: "🕶️", rating: 4.8, reviews: 203, featured: false },
-          { id: 7, name: "Kit Mouche Complet", category: "fishing", subcategory: "Cannes", price: 299.99, originalPrice: 379.99, image: "🎣", rating: 4.7, reviews: 45, featured: true },
-          { id: 8, name: "Siège Kayak Confort", category: "fishing", subcategory: "Accessoires", price: 124.99, originalPrice: null, image: "🪑", rating: 4.4, reviews: 92, featured: false },
-          { id: 9, name: "Arc Compound Predator", category: "hunting", subcategory: "Arcs", price: 599.99, originalPrice: 749.99, image: "🏹", rating: 4.9, reviews: 156, featured: true },
-          { id: 10, name: "Arbalète Phantom X", category: "hunting", subcategory: "Arbalètes", price: 849.99, originalPrice: null, image: "🏹", rating: 4.8, reviews: 78, featured: true },
-          { id: 11, name: "Manteau Camo Tactique", category: "hunting", subcategory: "Vêtements", price: 189.99, originalPrice: 229.99, image: "🧥", rating: 4.7, reviews: 312, featured: true },
-          { id: 12, name: "Bottes Isolées -40°C", category: "hunting", subcategory: "Vêtements", price: 219.99, originalPrice: null, image: "🥾", rating: 4.6, reviews: 189, featured: false },
-          { id: 13, name: "Mirador Deluxe Pro", category: "hunting", subcategory: "Affûts", price: 274.99, originalPrice: 324.99, image: "🌲", rating: 4.5, reviews: 134, featured: false },
-          { id: 14, name: "Cache Ground Blind", category: "hunting", subcategory: "Affûts", price: 199.99, originalPrice: null, image: "⛺", rating: 4.6, reviews: 87, featured: false },
-          { id: 15, name: "Jumelles 10x42 HD", category: "hunting", subcategory: "Optiques", price: 349.99, originalPrice: 429.99, image: "🔭", rating: 4.8, reviews: 223, featured: true },
-          { id: 16, name: "Lunette Visée 3-9x40", category: "hunting", subcategory: "Optiques", price: 279.99, originalPrice: null, image: "🎯", rating: 4.7, reviews: 167, featured: false },
+          { id: 1, name: "Télémètre Laser Bushnell", category: "hunting", subcategory: "Optiques", price: 299.99, originalPrice: 349.99, image: "/assets/products/rangefinder.jpg", rating: 4.8, reviews: 124, featured: true },
+          { id: 2, name: "Canne à Pêche Performance", category: "fishing", subcategory: "Cannes", price: 189.99, originalPrice: null, image: "/assets/products/rod.avif", rating: 4.9, reviews: 89, featured: true },
+          { id: 3, name: "Bottes de Marche Pro", category: "hunting", subcategory: "Vêtements", price: 149.99, originalPrice: 179.99, image: "/assets/products/boots.webp", rating: 4.6, reviews: 256, featured: false },
+          { id: 4, name: "Bottes Chasse Isolées", category: "hunting", subcategory: "Vêtements", price: 229.99, originalPrice: null, image: "/assets/products/hunting-boots.webp", rating: 4.7, reviews: 178, featured: false },
+          { id: 5, name: "Manteau Chasse JTM", category: "hunting", subcategory: "Vêtements", price: 279.99, originalPrice: 329.99, image: "/assets/products/hunting-jacket.webp", rating: 4.5, reviews: 67, featured: true },
+          { id: 6, name: "Pantalon Camo Orignal", category: "hunting", subcategory: "Vêtements", price: 159.99, originalPrice: null, image: "/assets/products/hunting-pants.webp", rating: 4.8, reviews: 203, featured: true },
+          { id: 7, name: "Chandail Ecotone Team", category: "fishing", subcategory: "Vêtements", price: 64.99, originalPrice: 79.99, image: "/assets/products/sweater.webp", rating: 4.7, reviews: 45, featured: true },
+          { id: 8, name: "Couteau Razor Pro Saw", category: "hunting", subcategory: "Couteaux", price: 89.99, originalPrice: null, image: "/assets/products/knife.webp", rating: 4.4, reviews: 92, featured: false },
+          { id: 9, name: "Veste de Flottaison", category: "fishing", subcategory: "Sécurité", price: 119.99, originalPrice: 139.99, image: "/assets/products/vest.webp", rating: 4.9, reviews: 156, featured: true },
+          { id: 10, name: "Ceinture Tactique", category: "hunting", subcategory: "Accessoires", price: 44.99, originalPrice: null, image: "/assets/products/belt.webp", rating: 4.8, reviews: 78, featured: true },
         ];
 
         // --- COMPONENTS ---
@@ -89,13 +83,9 @@
                     isScrolled ? 'bg-black/95 backdrop-blur-xl border-b border-white/10 py-3' : 'bg-transparent py-5'
                 }`}>
                 <div className="max-w-7xl mx-auto px-6 flex items-center justify-between">
-                    <div className="flex items-center gap-2 cursor-pointer group" onClick={() => onNavigate('home')}>
-                        <div className="w-10 h-10 bg-[#8BC34A] rounded-lg flex items-center justify-center rotate-3 group-hover:rotate-12 transition-transform duration-300">
-                            <Icon name="sparkles" className="w-6 h-6" />
-                        </div>
-                        <div className="flex flex-col">
-                            <span className="text-xl font-bold font-oswald tracking-tighter text-white uppercase italic leading-none">ECOTONE</span>
-                            <span className="text-[10px] font-bold text-[#8BC34A] tracking-[0.2em] uppercase leading-none">Gatineau</span>
+                    <div className="flex items-center gap-4 cursor-pointer group" onClick={() => onNavigate('home')}>
+                        <div className="h-10 transition-transform duration-500 group-hover:scale-110 group-hover:-rotate-3">
+                            <img src="/assets/ecotone-gatineau-logo.png" alt="Ecotone Gatineau" className="h-full w-auto object-contain filter invert brightness-200" />
                         </div>
                     </div>
                     <div className="hidden md:flex items-center gap-10">
@@ -119,7 +109,7 @@
             <section className="relative min-h-screen flex items-center overflow-hidden bg-[#050804]">
                 <div className="absolute inset-0 z-0">
                     <video autoPlay loop muted playsInline className="absolute inset-0 w-full h-full object-cover opacity-40">
-                        <source src="public/assets/ecotone-hero-upscaled.mp4" type="video/mp4" />
+                        <source src="/ecotone-hero-upscaled.mp4" type="video/mp4" />
                     </video>
                     <div className="absolute top-0 left-0 w-full h-full bg-[radial-gradient(circle_at_20%_50%,rgba(74,127,36,0.3),transparent_50%)]" />
                     <div className="absolute bottom-0 right-0 w-full h-full bg-[radial-gradient(circle_at_80%_50%,rgba(139,195,74,0.2),transparent_50%)]" />
@@ -175,7 +165,13 @@
         const ProductCard = ({ p, onAdd }) => (
             <motion.div initial={{ opacity: 0, y: 20 }} whileInView={{ opacity: 1, y: 0 }} viewport={{ once: true }}
                 className="bg-[#0d0f0c] border border-white/10 group relative transition-all duration-500 hover:bg-white/[0.03] p-6 hover:border-[#8BC34A]/50">
-                <div className="h-48 flex items-center justify-center text-8xl mb-6 transition-transform duration-500 group-hover:scale-110">{p.image}</div>
+                <div className="h-48 flex items-center justify-center mb-6 transition-transform duration-500 group-hover:scale-110">
+                    {p.image.startsWith('/') ? (
+                        <img src={p.image} alt={p.name} className="max-w-full max-h-full object-contain" />
+                    ) : (
+                        <span className="text-8xl">{p.image}</span>
+                    )}
+                </div>
                 <div className="flex justify-between items-start mb-2">
                     <p className="text-[10px] font-black text-[#8BC34A] uppercase tracking-widest">{p.subcategory}</p>
                     {p.originalPrice && <span className="bg-red-500/10 text-red-500 text-[8px] font-bold px-2 py-0.5 border border-red-500/20">SOLDE</span>}
@@ -404,11 +400,11 @@
                     </main>
 
                     <footer className="bg-black py-40 text-center border-t border-white/5 overflow-hidden">
-                        <div className="flex justify-center gap-12 mb-20 opacity-10 filter grayscale invert">
+                        <div className="flex justify-center gap-12 mb-20 opacity-10 filter grayscale brightness-0 invert">
                            {['shield', 'target', 'map', 'compass'].map(icon => <Icon key={icon} name={icon} className="w-12 h-12" />)}
                         </div>
-                        <div className="w-20 h-20 bg-[#8BC34A]/5 rounded-3xl mx-auto flex items-center justify-center mb-12 border border-[#8BC34A]/10 shadow-3xl shadow-[#8BC34A]/5 group animate-pulse">
-                            <Icon name="mountain" className="w-10 h-10 text-[#8BC34A]" />
+                        <div className="h-32 mx-auto flex items-center justify-center mb-12 group">
+                            <img src="/assets/ecotone-gatineau-logo.png" alt="Logo" className="h-full w-auto object-contain filter invert opacity-50 group-hover:opacity-100 transition-opacity duration-700" />
                         </div>
                         <p className="text-[14px] font-black uppercase tracking-[1em] text-white/30 italic font-oswald">ECOTONE GATINEAU // 2026</p>
                         <div className="mt-12 flex justify-center gap-16 text-[10px] font-black uppercase tracking-[0.4em] text-white/10">
