--- a/public/pro-viewer.html
+++ b/public/pro-viewer.html
@@ -56,22 +56,16 @@
 
         // --- DATA ---
         const ALL_PRODUCTS = [
-          { id: 1, name: "Canne à lancer Pro Series", category: "fishing", subcategory: "Cannes", price: 149.99, originalPrice: 189.99, image: "🎣", rating: 4.8, reviews: 124, featured: true },
-          { id: 2, name: "Moulinet Titanium Elite", category: "fishing", subcategory: "Moulinets", price: 229.99, originalPrice: null, image: "🎣", rating: 4.9, reviews: 89, featured: true },
-          { id: 3, name: "Coffre à pêche XL", category: "fishing", subcategory: "Équipement", price: 49.99, originalPrice: 64.99, image: "🧰", rating: 4.6, reviews: 256, featured: false },
-          { id: 4, name: "Kit leurres (25 pcs)", category: "fishing", subcategory: "Leurres", price: 34.99, originalPrice: null, image: "🪱", rating: 4.7, reviews: 178, featured: false },
-          { id: 5, name: "Cuissardes Néoprène Pro", category: "fishing", subcategory: "Vêtements", price: 179.99, originalPrice: 219.99, image: "👢", rating: 4.5, reviews: 67, featured: true },
-          { id: 6, name: "Lunettes Polarisées HD", category: "fishing", subcategory: "Accessoires", price: 89.99, originalPrice: null, image: "🕶️", rating: 4.8, reviews: 203, featured: false },
-          { id: 7, name: "Kit Mouche Complet", category: "fishing", subcategory: "Cannes", price: 299.99, originalPrice: 379.99, image: "🎣", rating: 4.7, reviews: 45, featured: true },
-          { id: 8, name: "Siège Kayak Confort", category: "fishing", subcategory: "Accessoires", price: 124.99, originalPrice: null, image: "🪑", rating: 4.4, reviews: 92, featured: false },
-          { id: 9, name: "Arc Compound Predator", category: "hunting", subcategory: "Arcs", price: 599.99, originalPrice: 749.99, image: "🏹", rating: 4.9, reviews: 156, featured: true },
-          { id: 10, name: "Arbalète Phantom X", category: "hunting", subcategory: "Arbalètes", price: 849.99, originalPrice: null, image: "🏹", rating: 4.8, reviews: 78, featured: true },
-          { id: 11, name: "Manteau Camo Tactique", category: "hunting", subcategory: "Vêtements", price: 189.99, originalPrice: 229.99, image: "🧥", rating: 4.7, reviews: 312, featured: true },
-          { id: 12, name: "Bottes Isolées -40°C", category: "hunting", subcategory: "Vêtements", price: 219.99, originalPrice: null, image: "🥾", rating: 4.6, reviews: 189, featured: false },
-          { id: 13, name: "Mirador Deluxe Pro", category: "hunting", subcategory: "Affûts", price: 274.99, originalPrice: 324.99, image: "🌲", rating: 4.5, reviews: 134, featured: false },
-          { id: 14, name: "Cache Ground Blind", category: "hunting", subcategory: "Affûts", price: 199.99, originalPrice: null, image: "⛺", rating: 4.6, reviews: 87, featured: false },
-          { id: 15, name: "Jumelles 10x42 HD", category: "hunting", subcategory: "Optiques", price: 349.99, originalPrice: 429.99, image: "🔭", rating: 4.8, reviews: 223, featured: true },
-          { id: 16, name: "Lunette Visée 3-9x40", category: "hunting", subcategory: "Optiques", price: 279.99, originalPrice: null, image: "🎯", rating: 4.7, reviews: 167, featured: false },
+          { id: 1, name: "Télémètre Laser Bushnell", category: "hunting", subcategory: "Optiques", price: 299.99, originalPrice: 349.99, image: "/assets/products/rangefinder.jpg", rating: 4.8, reviews: 124, featured: true },
+          { id: 2, name: "Canne à Pêche Performance", category: "fishing", subcategory: "Cannes", price: 189.99, originalPrice: null, image: "/assets/products/rod.avif", rating: 4.9, reviews: 89, featured: true },
+          { id: 3, name: "Bottes de Marche Pro", category: "hunting", subcategory: "Vêtements", price: 149.99, originalPrice: 179.99, image: "/assets/products/boots.webp", rating: 4.6, reviews: 256, featured: false },
+          { id: 4, name: "Bottes Chasse Isolées", category: "hunting", subcategory: "Vêtements", price: 229.99, originalPrice: null, image: "/assets/products/hunting-boots.webp", rating: 4.7, reviews: 178, featured: false },
+          { id: 5, name: "Manteau Chasse JTM", category: "hunting", subcategory: "Vêtements", price: 279.99, originalPrice: 329.99, image: "/assets/products/hunting-jacket.webp", rating: 4.5, reviews: 67, featured: true },
+          { id: 6, name: "Pantalon Camo Orignal", category: "hunting", subcategory: "Vêtements", price: 159.99, originalPrice: null, image: "/assets/products/hunting-pants.webp", rating: 4.8, reviews: 203, featured: true },
+          { id: 7, name: "Chandail Ecotone Team", category: "fishing", subcategory: "Vêtements", price: 64.99, originalPrice: 79.99, image: "/assets/products/sweater.webp", rating: 4.7, reviews: 45, featured: true },
+          { id: 8, name: "Couteau Razor Pro Saw", category: "hunting", subcategory: "Couteaux", price: 89.99, originalPrice: null, image: "/assets/products/knife.webp", rating: 4.4, reviews: 92, featured: false },
+          { id: 9, name: "Veste de Flottaison", category: "fishing", subcategory: "Sécurité", price: 119.99, originalPrice: 139.99, image: "/assets/products/vest.webp", rating: 4.9, reviews: 156, featured: true },
+          { id: 10, name: "Ceinture Tactique", category: "hunting", subcategory: "Accessoires", price: 44.99, originalPrice: null, image: "/assets/products/belt.webp", rating: 4.8, reviews: 78, featured: true },
         ];
 
         // --- COMPONENTS ---
@@ -175,7 +169,13 @@
         const ProductCard = ({ p, onAdd }) => (
             <motion.div initial={{ opacity: 0, y: 20 }} whileInView={{ opacity: 1, y: 0 }} viewport={{ once: true }}
                 className="bg-[#0d0f0c] border border-white/10 group relative transition-all duration-500 hover:bg-white/[0.03] p-6 hover:border-[#8BC34A]/50">
-                <div className="h-48 flex items-center justify-center text-8xl mb-6 transition-transform duration-500 group-hover:scale-110">{p.image}</div>
+                <div className="h-48 flex items-center justify-center mb-6 transition-transform duration-500 group-hover:scale-110">
+                    {p.image.startsWith('/') ? (
+                        <img src={p.image} alt={p.name} className="max-w-full max-h-full object-contain" />
+                    ) : (
+                        <span className="text-8xl">{p.image}</span>
+                    )}
+                </div>
                 <div className="flex justify-between items-start mb-2">
                     <p className="text-[10px] font-black text-[#8BC34A] uppercase tracking-widest">{p.subcategory}</p>
                     {p.originalPrice && <span className="bg-red-500/10 text-red-500 text-[8px] font-bold px-2 py-0.5 border border-red-500/20">SOLDE</span>}
